readme file added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Türkiye'nin en güvenilir emlak, araç ve işyeri ilan platformu" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>RealEstate - Emlak, Araç ve İşyeri İlanları</title>
+  <title>Vesta - Emlak, Araç ve İşyeri İlanları</title>
 </head>
 
 <body>
