--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/vesta-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#2563eb" />
   <meta name="description" content="Türkiye'nin en güvenilir emlak, araç ve işyeri ilan platformu" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/vesta-logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Vesta - Emlak, Araç ve İşyeri İlanları</title>
 </head>
